--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "pass-generator-node",
+  "name": "passg",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "preferGlobal": true,
   "bin": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
